CSS/styles.css
/* ... */
.icon--small {
  width: 30px;
  height: 30px;
}
/*Skin for icon*/
.icon--primary {
  fill: var(--color-primary);
}
.icon--secondary {
  fill: #fff;
}
.icon--white {
  fill: #fff;
}
/*for icon-container*/
.icon-container {
  background-color: #f3f9fa;
  width: 64px;
  height: 64px;
  border-radius: 100%; /*or 32px*/
  display: inline-flex;
  justify-content: center;
  align-items: center;
}
.icon-container--accent {
  background: var(--color-accent);
}
/*Buttons*/
/*Default styles for allbuttons*/
.btn {
  border-radius: 40px;
  border: 0;
  cursor: pointer;
  font-size: 1.8rem;
  font-weight: 600;
  margin: 1rem 0;
  outline: 0;
  padding: 2rem 3rem;
  text-align: center;
  text-transform: uppercase;
  white-space: nowrap;
}
.btn .icon {
  width: 2rem;
  height: 2rem;
  margin-right: 1rem;
  vertical-align: middle;
}
/*For block button structure*/
.btn--block {
  width: 100%;
  display: inline-block; /*for anchor element since anchor is inline*/
}
/*Buttons hover effects and skins*/
.btn--primary {
  background-color: var(--color-primary);
  color: #fff;
}
.btn--primary:hover {
  background-color: #3a8ffd;
}
.btn--secondary {
  background-color: var(--color-secondary);
  color: #fff;
}
.btn--secondary:hover {
  background-color: #00c8eb;
}
.btn--stretched {
  padding-left: 6rem;
  padding-right: 6rem;
}
.btn--outline {
  background-color: #fff;
  color: var(--color-headings);
  border: 2px solid var(--color-headings);
}
.btn--outline:hover {
  background-color: var(--color-headings);
  color: #fff;
}
.btn--accent {
  background-color: var(--color-accent);
  color: #fff;
}
.btn--accent:hover {
  background-color: #ec3000;
}
@media screen and (min-width: 1024px) {
  .btn {
    font-size: 1.5rem;
  }
}
/*Inputs*/
/*for inputfield*/
.input {
  border-radius: var(--border-radius);
  border: 1px solid var(--color-border);
  color: var(--color-headings);
  font-size: 2rem;
  outline: 0;
  padding: 1.5rem 3.5rem;
}
/*for input placeholder*/
::placeholder {
  color: #cdcbd7;
  text-transform: capitalize;
}
@media screen and (min-width: 1024px) {
  .input {
    font-size: 1.5rem;
  }
}
/*for Input-group*/
.input-group {
  border-radius: var(--border-radius);
  border: 1px solid var(--color-border);
  display: flex;
}
.input-group .input {
  border: 0;
  flex-grow: 1;
  padding: 1.5rem 2rem;
}
.input-group .btn {
  margin: 4px;
}
/*Cards*/
/*Default card structure*/
.card {
  border-radius: 7px;
  box-shadow: 0 0 30px 10px #f3f3f3;
  overflow: hidden;
}
/*card header,card body structure*/
.card__header,
.card__body {
  padding: 2rem 3rem;
}
/*for primary-card cardheader skin*/
.card--primary .card__header {
  background-color: var(--color-primary);
  color: #fff;
}
/*for secondary-card cardheader skin*/
.card--secondary .card__header {
  background-color: var(--color-secondary);
  color: #fff;
}
/*for primary-card primary-badge*/
.card--primary .badge--primary {
  background-color: #126de4;
}
/*for secondary-card secondary-badge*/
.card--secondary .badge--secondary {
  background-color: #02cdf1;
}
/*plans*/
.plan {
  transition: transform 0.3s ease-out;
}
.plan__name {
  font-size: 2.4rem;
  font-weight: 500;
  color: #fff;
  margin: 0;
}
.plan__price {
  font-size: 6rem;
}
.plan__billing-cycle {
  font-size: 2.4rem;
  opacity: 0.8;
  margin-right: 1rem;
  font-weight: 300;
}
.plan__description {
  font-size: 2rem;
  display: block;
  letter-spacing: 1px;
  font-weight: 300;
}
.plan--popular {
  transform: scale(1.1); /*10% larger*/
}
/*for plancomponent listitems*/
.plan .list__item {
  letter-spacing: 1px;
  margin-bottom: 2rem;
}
.plan:hover {
  transform: scale(1.05);
}
.plan--popular:hover {
  transform: scale(1.15);
}
@media screen and (min-width: 1024px) {
  .plan__name {
    font-size: 1.4rem;
  }
  .plan__price {
    font-size: 5rem;
  }
  .plan__billing-cycle {
    font-size: 1.6rem;
  }
  .plan__description {
    font-size: 1.7rem;
  }
}
/*Popularbadge*/
/*header(parent) should be relative because popular-badge(child) is absolutely positioned*/
.plan--popular .card__header {
  position: relative;
}
/*adding popular badge component on header*/
.plan--popular .card__header::before {
  content: url(../images/popular.svg);
  display: inline-block;
  width: 40px;
  position: absolute;
  top: -6px;
  right: 5%;
}
/*Mediacomponent*/
/*for Mediacomponent*/
.media {
  display: flex;
  margin-bottom: 4rem;
}
/*for Mediabodycomponent*/
.media__body {
  margin: 0 2rem; /*(or)padding:0 2rem;*/
}
/*for Mediatitlecomponent*/
.media__title {
  margin-top: 0;
}
/*for Mediaimagecomponent*/
.media__image {
  margin-top: 1rem;
}
/*Quotes*/
.quote {
  font-size: 3rem;
  font-style: italic;
  color: var(--color-body-darker);
  line-height: 1.3;
}
.quote__text::before {
  content: open-quote;
}
.quote__text::after {
  content: close-quote;
}
.quote__title {
  font-family: "monsterrat", Arial, Helvetica, sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 3rem; /*Not necessarily need because we declared in parent*/
  margin-bottom: 0;
}
.quote__organization {
  color: var(--color-headings);
  font-style: normal;
  font-size: 2rem;
  opacity: 0.4; /*which means 0.4=40%;*/
}
.quote .quote__line {
  position: relative;
  bottom: 10px;
}
@media screen and (min-width: 1024px) {
  .quote {
    font-size: 2rem;
  }
  .quote__title {
    font-size: 2.4rem;
  }
  .quote__organization {
    font-size: 1.6rem;
  }
}
/*Grids*/
.grid {
  display: grid;
}
/*for tablet and wider screens*/
@media screen and (min-width: 728px) {
  .grid--1x2 {
    grid-template-columns: 1fr 1fr; /*or repeat(2,1fr);*/
  }
}
/*for Desktop and wider screens*/
@media screen and (min-width: 1024px) {
  .grid--1x3 {
    grid-template-columns: 1fr 1fr 1fr; /*repeat(3,1fr);*/
  }
}
/*Testimonial*/
/*for card*/
.testimonial {
  padding: 3rem;
}
.nav__brand {
  transform: translateY(5px);
}
/*slightly change*/
.grid {
  margin: 1rem;
}
.testimonial__image > img {
  width: 100%;
}
.testimonial__image {
  position: relative;
}
/* ... */

